test/errors/identifiers_error/zs/reserved_keywords/python_keyword_field_name_error.zs
package reserved_keywords.python_keyword_field_name_error;

struct Item
{
    uint16  param;
    uint32  def;    // reserved keyword in generated Python
};
